fix: overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@ html, body, #root {
   left: 0;
   margin: 0;
   padding: 0;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
@@ -17,6 +17,7 @@ body {
 .App {
   width: auto;
   height: auto;
+  min-height: 96vh;
   margin: 1%;
 }
 
